This is a summary of the changes in KTIGCC since the first alpha release:

KTIGCC 1.09 (2007-10-09):

* Fixed infinite loop when parsing user headers including each other for
  completion information.


KTIGCC 1.08 (2007-07-09):

* KDElibs 3.5.7 or higher are now required.
* Ctrl+Return now works for "Open file at cursor" (not just Ctrl+Numpad Enter)
* Fixed extra newline incorrectly added each time a file is saved.
* Now generating smaller syntax highlighting descriptions for mixes of
  case-sensitive and case-insensitive word lists (using new KatePart feature).
* KTIGCC no longer installs into the $TIGCC prefix, instead a regular prefix is
  used. The default is /usr/local. It can be set by setting the $PREFIX
  environment variable or setting it in the qmake command line (e.g.
  qmake-qt4 PREFIX=/usr).


KTIGCC 1.07 (2007-04-03):

* Added a full changelog (generated from CVS logs).
* Fixed stray indentation at the end of the line when autoclosing a curly brace
  as ENTER is pressed.
* Fixed highlighting update when moving a file to Header Files from another
  editable category. (The first character was read from the wrong buffer.)
* Don't hardcode ~/.kde for the KDEHOME directory.
* Fixed missing word wrap on the data variable reloc label in Program Options.
* Fixed A68k items in the New menu being shown even when A68k is not installed.
* Don't grab the keyboard globally (stealing key presses from other apps) in the
  Errors&Warnings pane, only override the Ctrl+C and Ctrl+Ins accelerators.
* Fixed adding to the recent file list getting confused by changes to the list
  from other KTIGCC instances.
* Fixed the wrong recent file getting opened when opening triggers save prompt.


KTIGCC 1.06 (2006-11-25):

* Added Anjuta 2 project, removed Anjuta 1 project.
* Fixed missing layout in the Operating System tab of the Program Options
  dialog.
* Fixed wrong length computations when writing to a file in UTF-8 or other