@@ -1,6 +1,6 @@
 This is a summary of the changes in KTIGCC since the first alpha release:
 
-CVS HEAD (2008-01-15):
+CVS HEAD (2008-05-01):
 
 * Added a full changelog (generated from CVS logs).
 * Fixed stray indentation at the end of the line when autoclosing a curly brace
@@ -34,6 +34,7 @@ CVS HEAD (2008-01-15):
 * Fixed infinite loop when parsing user headers including each other for
   completion information.
 * Made the Errors and Warnings pane non-detachable.
+* Fixed the compilation with GCC 4.3.
 
 
 KTIGCC 1.06 (2006-11-25):
