@@ -1,5 +1,10 @@
 This is a summary of the changes in KTIGCC since the first alpha release:
 
+CVS ktigcc-1-branch (2008-05-01):
+
+* Fixed the compilation with GCC 4.3.
+
+
 KTIGCC 1.09 (2007-10-09):
 
 * Fixed infinite loop when parsing user headers including each other for
